syntax = "proto3";
package proto;



message RegisterC2s{
	uint64 phone_number =1;
	string password = 2;
}

message RegisterS2c{
	uint32 err_code =1;
	uint64 user_id =2;
}


