syntax = "proto3";
import "client.proto";
package proto;

service Register {
	rpc Register(RegisterC2s) returns (RegisterS2c){}
}

service Login {
	rpc Login(LoginC2s) returns (LoginS2c){}
}

service UserInfoManager{
	rpc UserInfoModify(UserInfoModifyC2S) returns (UserInfoModifyS2C) {}
	rpc UserInfoGet(UserInfoGetC2S) returns (UserInfoGetS2C){}
}


service GeoManager{
	rpc UserGeoUpload(GeoUploadC2S ) returns (CommonS2C) {}
}

service SessionManager{
	rpc GetSession(GetSessionC2S) returns (GetSessionS2C){}
	rpc AuthSession(AuthC2S) returns (CommonS2C){}
}

service Relation{
	rpc RecentContactGet(RecentContactGetC2S) returns(RecentContactGetS2C){}
}